[package]
name = "MTCGAGA"
version = "0.1.7"
edition = "2024"

[dependencies]
xcap = "0.8.0"
device_query = "4.0.1"
rdev = "0.5.3"
enigo = "0.6.1"
axum = { version = "0.8.7", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
image = { version = "0.25.9", features = ["bmp"] }
tokio = { version = "1.48.0", features = ["full"] }